<resources>
    <string name="app_name">FlashCard</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="loi_giai">Lời giải</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="thu_vien">Thư viện</string>
    <string name="ho_so">Hồ sơ</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="hoc_phan">Học phần</string>
    <string name="xem_tat_ca">Xem tất cả</string>
    <string name="thu_muc">Thư mục</string>
    <string name="tao_hoc_phan">Tạo học phần</string>
    <string name="tao_thu_muc">Tạo thư mục</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>