<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.HomePageFragment">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_blue"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_avatar"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="32dp"
                            android:src="@drawable/baseline_person_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription,ImageContrastCheck" />
                        <TextView
                            android:id="@+id/tv_hello_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="40dp"
                            android:text="Hello, User!"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="HardcodedText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="32dp"
                            android:src="@drawable/baseline_circle_notifications_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription,ImageContrastCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <EditText
                        android:id="@+id/edt_search"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/background_search"
                        android:drawableStart="@drawable/baseline_search_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/tim_kiem"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
                        android:autofillHints="" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hoc_phan"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_margin="12dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/tv_all_course"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xem_tat_ca"
                            android:textColor="@color/button_color"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_margin="12dp"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_all_course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:clipToPadding="false"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_muc"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_margin="12dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/tv_all_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xem_tat_ca"
                            android:textColor="@color/button_color"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_margin="12dp"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_all_folder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:clipToPadding="false"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>